--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href=recipes/cookies.html>Cookies</a></li>
+        <li><a href="RecipePages/cookies.html">Cookies</a></li>
+        <li><a href="RecipePages/MacAndCheese.html">Macaroni and Cheese</a></li>
     </ul>
 </body>
 </html>
